fix flicker in animation (solution found at http://stackoverflow.com/questions/2946748/iphone-webkit-css-animations-cause-flicker)

--- a/store/styles/_includes/_welcome_view.scss
+++ b/store/styles/_includes/_welcome_view.scss
@@ -28,6 +28,7 @@
         @include background-image(linear-gradient(#393939, #222));
 
         -webkit-transform: translate3d(0,100px,0);
+        -webkit-perspective: 1000;
         button {
             @include big-button-primary;
             width: 28%;
